<package format="2">
  <name>sbpl</name>
  <version>1.3.1</version>
  <description>
    Search-Based Planning Library
  </description>
  <maintainer email="m-murooka@aist.go.jp">Masaki Murooka</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/sbpl</url>
  <author>www.sbpl.net</author>

  <buildtool_depend>catkin</buildtool_depend>
</package>
